--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/danpaul/sql_login",
   "dependencies": {
     "async": "^0.9.0",
+    "base64url": "^1.0.4",
     "bcrypt": "^0.8.1",
     "knex": "^0.7.3",
     "mysql": "^2.5.4",
